--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -145,8 +145,12 @@ foreach(EXAMPLE ${EXAMPLES})
   endif(MSVC)
 endforeach(EXAMPLE)
 
+if (CMAKE_COMPILER_IS_GNUCXX)
+  set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11")
+endif (CMAKE_COMPILER_IS_GNUCXX)
+
 IF (${CMAKE_SYSTEM_NAME} MATCHES "Linux")
-  set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -D_LINUX -std=c++0x")
+  set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -D_LINUX")
 ENDIF (${CMAKE_SYSTEM_NAME} MATCHES "Linux")
 
 include_directories( include )
